welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: not found: value nbBis
			{nbBis = nbBis + 1}
                         ^Poucet:8: error: not found: value nbBis
	if (nbBis <= 2)
            ^