welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while (sortieTrouvee())
	do 	{avance()
		if (estSurBiscuit)
			{nbBis = nbBis + 1}
		}
	while (!croisement())
	if (nbBis <= 2)
			droite()
		else gauche()